--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,10 @@ android {
         applicationId "com.er.scan"
         minSdk 19
         targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "2"
 
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -36,6 +37,11 @@ dependencies {
     // Plugin Necesario para Scaner
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //Implementacion de anuncios
+    implementation 'com.google.android.gms:play-services-ads:20.5.0'
+
+    implementation 'androidx.multidex:multidex:2.0.1'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
