--- a/ScanCam/app/build.gradle
+++ b/ScanCam/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.er.scan"
         minSdk 19
         targetSdk 31
-        versionCode 5
-        versionName "2.2"
+        versionCode 6
+        versionName "3"
 
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -48,7 +48,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.4.0'
     implementation 'androidx.navigation:navigation-ui:2.4.0'
 
+    implementation 'com.google.android.play:core:1.10.3'
+
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
 }
