--- a/ScanCam/app/src/main/AndroidManifest.xml
+++ b/ScanCam/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.er.scan">
+    package="com.stuarddevapps.scancam">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ScanCam">
         <activity
-            android:name=".SplashScreen"
+            android:name="com.stuarddevapps.scancam.SplashScreen"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
@@ -21,25 +21,28 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-6691938542138083~2461232913" />
 
+
         <activity
-            android:name=".Politicas"
+            android:name="com.stuarddevapps.scancam.Politicas"
             android:exported="true" />
         <activity
-            android:name=".Terminos"
+            android:name="com.stuarddevapps.scancam.Terminos"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.stuarddevapps.scancam.MainActivity"
             android:exported="true">
 
         </activity>
         <activity
-            android:name=".CaptureActivityPortrait"
+            android:name="com.stuarddevapps.scancam.CaptureActivityPortrait"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme"
