--- a/ScanCam/app/src/main/AndroidManifest.xml
+++ b/ScanCam/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application
+    <application android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.ScanCam">
         <activity
