--- a/ScanCam/app/src/main/AndroidManifest.xml
+++ b/ScanCam/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
 
     <application android:hardwareAccelerated="true"
         android:allowBackup="true"
-        android:icon="@drawable/logo"
+        android:icon="@mipmap/logo_xxxhdpi"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logo"
+        android:roundIcon="@mipmap/logo_xxxhdpi"
         android:supportsRtl="true"
         android:theme="@style/Theme.ScanCam">
         <activity
