--- a/ScanCam/app/src/main/AndroidManifest.xml
+++ b/ScanCam/app/src/main/AndroidManifest.xml
@@ -5,15 +5,22 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:hardwareAccelerated="true"
+    <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/logo_xxxhdpi"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo_xxxhdpi"
         android:supportsRtl="true"
         android:theme="@style/Theme.ScanCam">
         <activity
-            android:name="com.stuarddevapps.scancam.SplashScreen"
+            android:name=".Politicas"
+            android:exported="false" />
+        <activity
+            android:name=".Terminos"
+            android:exported="false" />
+        <activity
+            android:name=".SplashScreen"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
@@ -21,7 +28,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <meta-data android:name="android.app.shortcuts"
+
+            <meta-data
+                android:name="android.app.shortcuts"
                 android:resource="@xml/shortcuts" />
         </activity>
 
@@ -29,14 +38,11 @@
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-6691938542138083~2461232913" />
 
-
         <activity
-            android:name="com.stuarddevapps.scancam.MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:name=".MainActivity"
+            android:exported="true" />
         <activity
-            android:name="com.stuarddevapps.scancam.CaptureActivityPortrait"
+            android:name=".CaptureActivityPortrait"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme"
