--- a/ScanCam/app/src/main/AndroidManifest.xml
+++ b/ScanCam/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ScanCam">
         <activity
+            android:name=".Informacion"
+            android:exported="false" />
+        <activity
             android:name=".Escaneo"
             android:exported="false" />
         <activity
